[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/hud/InventoryGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/hud/Inventory.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="Inventory" type="CanvasLayer"]
visible = false
script = ExtResource( 2 )

[node name="InventoryGrid" parent="." instance=ExtResource( 1 )]
position = Vector2( 58, 140 )

[node name="Selector" type="Area2D" parent="."]
collision_layer = 1280
collision_mask = 1280

[node name="CollisionShape2D" type="CollisionShape2D" parent="Selector"]
shape = SubResource( 1 )
disabled = true

[connection signal="area_entered" from="InventoryGrid/MouseHover" to="." method="_on_MouseHover_area_entered"]
[connection signal="area_exited" from="InventoryGrid/MouseHover" to="." method="_on_MouseHover_area_exited"]
[connection signal="area_entered" from="Selector" to="." method="_on_Selector_area_entered"]
[connection signal="area_exited" from="Selector" to="." method="_on_Selector_area_exited"]

[editable path="InventoryGrid"]
